<resources>
    <!-- Non translatable -->
    <string name="server_url_tomcat" translatable="false">:8088/cukio/rest/cukio_server_secure/"</string>
    <string name="registration_method" translatable="false">register_device_secure/"</string>
    <string name="get_zips_method" translatable="false">get_zips_secure/"</string>


    <string name="app_name">Cooking with Cookeo</string>
    <string name="action_settings">Settings</string>
    <string name="no_storage_available">Can\'t access to device storage</string>

    <string name="fastscroller_track" translatable="false">FastScroller track</string>
    <string name="fastscroller_handle" translatable="false">FastScroller handle</string>
    <string name="action_share">Share</string>
    <string name="search_hint">Search recipes</string>
    <string name="search_settings">Search settings</string>
    <string name="matches">Matches</string>
    <string name="no_matches">No matches</string>
    <string name="recipes">%1$d recipes</string>
    <string name="designed_by">designed by Freepik.com</string>
    <string name="audio_notification">Notification tone</string>
    <string name="audio_notification_description">Choose a sound for new recipes incoming notification</string>
    <string name="category_application">Application settings</string>
    <string name="desserts">Desserts</string>
    <string name="favourite">Favorite</string>
    <string name="favourites">Favorites</string>
    <string name="last_downloaded">Last downloaded recipes</string>
    <string name="main_courses">Main courses</string>
    <string name="notifications">New recipes notifications</string>
    <string name="own_recipes">Own recipes</string>
    <string name="screen_of_description">Screen will be turned off, according to the user\'s settings</string>
    <string name="screen_on">Screen remains allways on</string>
    <string name="search_by_ingredients">Search by ingredients</string>
    <string name="starters">Starters</string>
    <string name="update_wifi">Update only when Wifi connected</string>
    <string name="update_wihtout_wifi_description">New recipes will be downloaded at any time</string>
    <string name="update_with_wifi_description">New recipes will be downloaded only when Wifi connected</string>
    <string name="vegetarians">Vegetarian dishes</string>
    <string name="vibrate">Vibrate</string>
    <string name="all_recipes">All recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="null_content_description" translatable="false"> </string>
    <string name="default_author">Preinstalled in Cookeo</string>
    <string name="original_link" translatable="false">Link:</string>
    <string name="author" translatable="false">Author:</string>
    <string name="edit_recipe">Edit recipe</string>
    <string name="remove_recipe">Remove recipe</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="screen_on_description">Screen allways on while showing the selected recipe</string>
    <string name="description_not_vibrate">Vibrate disabled on notifiactions</string>
    <string name="description_vibrate">Vibrate enabled on notifications</string>
    <string name="exit_application_title">Exit</string>
    <string name="exit_application">Want to leave %1$s?</string>
    <string name="sender">Sended by %1$s</string>
    <string name="email_alert_title">Send recipe</string>
    <string name="email_alert_body">Choose your favourite email client</string>
    <string name="aceptar">Accept</string>
    <string name="thanks">Thanks</string>
    <string name="thanks_intro">This app is possible due to these bloggers, who lend their recipes selfessly. Check them out!!</string>
    <string name="colaborator1" translatable="false">http://recetascookeo.blogspot.com.es/</string>
    <string name="colaborator2" translatable="false">http://www.descubriendonuevossabores.com/</string>
    <string name="colaborator3" translatable="false">http://www.losblogsdemaria.com/</string>
    <string name="colaborator4" translatable="false">http://cocinayrecetas.hola.com/lacocinaperfecta/</string>
    <string name="support_recipes">If you\'ve got your own Cuisine blog and want to see your recipes in %1$s, email us to %2$s!</string>
    <string name="support_girl_title">To my girlfriend:</string>
    <string name="support_girl_body">She gave me the idea, helped me with the recipes selection and parsing, and mainly, for being so patient with me when I spent all those hours in front of my laptop. Love you much!!</string>
    <string name="restore_recipe_confirmation">Restore to original recipe? This operations can\'t be undone!</string>

    <string name="banner_ad_unit_id_list" translatable="false">ca-app-pub-8409265947000941/8141554119</string>
    <string name="banner_ad_unit_id_details" translatable="false">ca-app-pub-8409265947000941/7907424516</string>
    <string name="banner_ad_unit_id_intersticial" translatable="false">ca-app-pub-8409265947000941/9384157718</string>
    <string name="minutes">minutes</string>
    <string name="portions">portions</string>
    <string name="tip">Tip</string>
    <string name="next">Next</string>
    <string name="create_recipe">Create recipe</string>
    <string name="menu_save_text">Save</string>
    <string name="exit_edit_title">Discard</string>
    <string name="exit_edit">Discard changes and go back to the previous screen?</string>
    <string name="hint_create_recipe_name">Recipe name</string>
    <string name="hint_create_recipe_author">Author</string>
    <string name="edit_recipe_picture_text">Tap to edit</string>
    <string name="time">Time</string>
    <string name="type_dish">Dish type</string>
    <string name="pick_from_camera">Use camera</string>
    <string name="pick_from_gallery">Choose from gallery</string>
    <string name="pick_photo">Choose a pic</string>
    <string name="no_camera">Can\\\'t open the camera</string>
    <string name="no_crop_app">No crop application found</string>
    <string name="duplicated_recipe">This name already exists</string>
    <string name="no_recipe_name">Add a recipe name</string>
    <string name="no_value">Enter a valid value</string>
    <string name="indredients_intructions">Type a new ingredient and press the button to add it to the recipe</string>
    <string name="delete_recipe_confirmation">Delete recipe? This operations can\'t be undone!</string>
    <string name="share_confirmation">Want to share the recipe?</string>
    <string name="ticker">New recipes for your Cookeo</string>
    <string name="new_recipes">New recipes</string>
    <string name="recipe_image_transition" translatable="false">recipe_image_transition</string>
    <string name="my_widget">Cooking with Cookeo</string>
    <string name="imagine" translatable="false">IMAGINE</string>
    <string name="soft" translatable="false">SOFT</string>
    <string name="rukia" translatable="false">RUKIA</string>
    <string name="create" translatable="false">CREATE</string>
    <string name="tutorial">Tutorial</string>
    <string name="swipe_horizontal">Swipe to delete a row</string>
    <string name="swipe_vertical">Drag and drop to reorder the items</string>
    <string name="hide">Don\'t show again</string>
    <string name="drag_drop_content_description">icon for drag and drop the row</string>
    <string name="image_of_the_recipe">image of the recipe</string>
    <string name="init_database_firstboot">Wait while configuring all recipes on first boot</string>

    <string name="thanks_blogs_title">Cuissine blogs:</string>
    <string name="cloud_backup">Cloud backup</string>
    <string name="cloud_backup_on_description">Backup on user\'s Google Drive account is enabled</string>
    <string name="cloud_backup_off_description">Backup on user\'s Google Drive account is disabled</string>


    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Authentication failed."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_in_discard">No, thanks</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Cooking with cookeo logo</string>
    <string name="title_signing">Sign in with\nGoogle</string>
    <string name="body_signing">Sign in  with your Gmail account to edit an create recipes.\nCooking with Cookeo doesn\'t store your information, but sign in is necessary to get all your own recipes available in all your devices!</string>
    <string name="exit">Exit</string>
    <string name="sign_out">Close session</string>
    <string name="loading">Loading…</string>
    <string name="anonymous">anonymous</string>
    <string name="write_external_explanation">Cooking with Cookeo needs this permission to load created or edited recipes from previous versions</string>
    <string name="permissions_title">Permission</string>
    <string name="write_external_denied">Recipes created or edited in previous versions wont be available</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="camera_explanation">You need to allow this permission in order to use the device\'s camera for taken a pic of your recipe</string>
    <string name="create_recipe_explanation">You need to sign with your Google account to create your own recipes</string>

    <string name="web_client_id" translatable="false">962580870211-67gs2sopg9l6v1bc36ed19rdc1dlj407.apps.googleusercontent.com</string>
    <string name="sign_in">Sign in</string>
    <string name="downloading_recipes">Downloading recipes… </string>
    <string name="downloading_recipes_first_load">Downloading recipes… It can take a couple of minutes on first load</string>
    <string name="cancel">Cancel</string>
    <string name="downloading_pictures">Downloading recipe\'s pictures in the background. You can use the app while downloading.</string>
    <string name="recipe_shared">Recipe shared!</string>

</resources>
