<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/standard_toolbar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/ColorPrimary"
            android:text="@string/thanks"
            android:id="@+id/textView_thanks"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/thanks_blogs_title"
            android:id="@+id/textView_thanks_blogs_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle=""
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/thanks_intro"
            android:id="@+id/textView_thanks_blogs_body"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/colaborator1"
            android:id="@+id/colaborador1"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/colaborator2"
            android:id="@+id/colaborador2"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/colaborator3"
            android:id="@+id/colaborador3"
            android:autoLink="web"
            android:linksClickable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/colaborator4"
            android:id="@+id/colaborador4"
            android:autoLink="web"
            android:linksClickable="true"

            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/support_girl_title"
            android:id="@+id/textView_support_girl_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/support_girl_body"
            android:id="@+id/textView_support_girl_body"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="start"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/support_recipes"
            android:id="@+id/textView_support_recipes"
            android:autoLink="email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            />
    </LinearLayout>
</ScrollView>