<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#000000"
             android:padding="10dp"
             android:layout_margin="5dp"
    android:id="@+id/widget_layout">

    <LinearLayout android:id="@+id/frmWidget"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_miniature_schnauzer_cocinero"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
        <TextView android:id="@+id/number_starters"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                  android:textStyle="bold"
                  android:text="@string/starters" />
        <TextView android:id="@+id/number_main"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                  android:textStyle="bold"
                  android:text="@string/main_courses" />
        <TextView android:id="@+id/number_desserts"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                  android:textStyle="bold"
                  android:text="@string/desserts" />

    </LinearLayout>

</FrameLayout>